# beatflower

./: .gitignore
ATmega2560/: Test_RGB.ino
ATtiny85/Serial_RGB/: Serial_RGB.ino
RecvOnlySoftSerial/: RecvOnlySoftSerial.cpp  RecvOnlySoftSerial.h
lib/: CMakeLists.txt  README.md
lib/include/beatflower/: BeatFlower.h
lib/src/: demo.cpp
lib/src/beatflower/: BeatFlower.cpp
